# cmdline-app

./: Cargo.toml  README.md
src/: main.rs  test.txt
tests/: cli.rs
