[package]
name = "grrs"
version = "0.1.0"
authors = ["Ryohei Suzuki <ryh.szk.cmnty@gmail.com>"]
description = "A tool to search files"
edition = "2018"
homepage = "https://github.com/ryhszk/cmdline-app"
repository = "https://github.com/ryhszk/cmdline-app"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
failure = "0.1.7"
exitfailure = "0.5.1"
indicatif = "0.15.0"
log = "0.4.11"
env_logger = "0.7.1"
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
